[package]
name = "game"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
rand = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
macroquad = { workspace = true }
